# jobber-mcp

./: .env.example  README.md  pyproject.toml
src/jobber_mcp/: __init__.py  audit.py  client.py  exceptions.py  server.py
tests/: test_audit.py  test_smoke.py
