[project]
name = "jobber_mcp"
version = "0.1.0"
description = "<DESCRIPTION>"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "sanjibani", email = "sanjibani@users.noreply.github.com" },
]
keywords = ["mcp", "model-context-protocol", "jobber_mcp"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.scripts]
jobber_mcp = "jobber_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobber_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"